# linyaps-box

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  README.zh_CN.md  REUSE.toml
.github/workflows/: build.yaml  codeql.yaml
.reuse/: dep5
3party/optional/: optional.hpp
app/ll-box/src/: main.cpp
archlinux/: PKGBUILD
cmake.external/CLI11/: FindCLI11.cmake
cmake.external/nlohmann_json/: Findnlohmann_json.cmake
debian/: changelog  control  copyright  linglong-box.lintian-overrides  rules
debian/patches/: 0001-feat-write-cred-before-start-container-process.patch  series
docs/: filesystem_driver.md
src/: CMakeLists.txt  README.md  loader.cpp  main.cpp
src/container/: container.cpp  container.h  container_option.cpp  container_option.h  helper.cpp  helper.h  seccomp.cpp  seccomp.h
src/container/mount/: filesystem_driver.cpp  filesystem_driver.h  host_mount.cpp  host_mount.h
src/linyaps_box/: app.cpp  app.h  cgroup.h  cgroup_manager.c  cgroup_manager.cpp  cgroup_manager.h  config.cpp  config.h  configuration.h.in  container.cpp  container.h  container_monitor.cpp  container_monitor.h  container_ref.cpp  container_ref.h  container_status.cpp  container_status.h  interface.cpp  interface.h  printer.cpp  printer.h  runtime.cpp  runtime.h  socket.cpp  socket.h  status_directory.cpp  status_directory.h  status_directory_manager.cpp  status_directory_manager.h  terminal.cpp  terminal.h  unix_socket.cpp  unix_socket.h  unixsocket.cpp  unixsocket.h  version.h.in
src/linyaps_box/command/: exec.cpp  exec.h  kill.cpp  kill.h  list.cpp  list.h  options.cpp  options.h  run.cpp  run.h
src/linyaps_box/config/: kernel_fallbacks.h  mount_options.h
src/linyaps_box/impl/: disabled_cgroup_manager.cpp  disabled_cgroup_manager.h  json_printer.cpp  json_printer.h  status_directory.cpp  status_directory.h  table_printer.cpp  table_printer.h
src/linyaps_box/io/: epoll.cpp  epoll.h  forwarder.cpp  forwarder.h
src/linyaps_box/utils/: atomic_write.cpp  atomic_write.h  cgroups.cpp  cgroups.h  close_range.cpp  close_range.h  defer.h  enum_traits.h  epoll.cpp  epoll.h  file.cpp  file.h  file_describer.cpp  file_describer.h  fstat.cpp  fstat.h  inspect.cpp  inspect.h  ioctl.h  log.cpp  log.h  mkdir.cpp  mkdir.h  mknod.cpp  mknod.h  mman.cpp  mman.h  open_file.cpp  open_file.h  platform.cpp  platform.h  process.cpp  process.h  ringbuffer.cpp  ringbuffer.h  semver.cpp  semver.h  session.cpp  session.h  signal.cpp  (+13 more)
src/util/: common.cpp  common.h  filesystem.cpp  filesystem.h  json.h  logger.cpp  logger.h  macro.h  message_reader.cpp  message_reader.h  oci-runtime.h  oci_runtime.h  platform.cpp  platform.h  semaphore.cpp  semaphore.h  util.h
src/util/debug/: debug.cpp  debug.h
test/: CMakeLists.txt  oci_test.cpp  seccomp_test.cpp
test/data/demo/: app-bash.json  app-sandbox.json  app-wine-bundle-nosandbox.json  app-wine-bundle.json  app-wine.json  config-mini.json  config-seccomp-default.yaml  config-seccomp.json  rootless-thin-runtime-app-wine.json  rootless-thin-runtime-app.json
test/protype/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  oci_test.cpp  seccomp_test.cpp
tests/data/demo/: app-bash.json  app-flatpak.json  app-sandbox.json  app-wine-bundle-nosandbox.json  app-wine-bundle.json  app-wine.json  config-mini.json  config.json  rootless-thin-runtime-app-wine.json  rootless-thin-runtime-app.json
tests/ll-box-st/: 01-run-whoami-with-debian-latest.json  01-run-whoami.json  02-check-procfs-with-ubuntu-latest.json  02-check-procfs.json  03-check-mounts-with-debian-latest.json  03-check-mounts.json  04-check-noNewPrivs-with-debian-latest.json  04-check-noNewPrivs.json  05-check-env.json  06-check-cwd.json  07-check-capability.json  08-check-umask.json  09-check-rlimits.json  10-check-oom.json  11-output-to-null.json  12-bind-host-dev.json  13-pid-extension.json  14-console-size.json  CMakeLists.txt  glibc_leaks.txt  ll-box-st
tests/ll-box-tests/src/: oci_test.cpp
tests/ll-box-ut/: .gitignore  CMakeLists.txt
tests/ll-box-ut/data/demo/: config-mini.json  config-seccomp-default.json  config-seccomp-default.yaml  config-seccomp.json  config.json  info.json  rootless-thin-runtime-app.json
tests/ll-box-ut/src/: seccomp_test.cpp  test.cpp
tests/protype/: main.cpp
tests/src/: oci_test.cpp  seccomp_test.cpp
tools/: format.sh  trace
